--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.10.RELEASE")
     }
 }
 
@@ -13,7 +13,8 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-bootJar {
+//due to version 1.5.10 otherwise bootJar for version 2.x
+jar {
     baseName = 'gs-spring-boot'
     version =  '0.1.0'
 }
@@ -33,5 +34,9 @@ dependencies {
     // tag::tests[]
     testCompile("org.springframework.boot:spring-boot-starter-test")
     // end::tests[]
+    //Promethues Endpoint
+    compile("io.prometheus:simpleclient_spring_boot:0.0.26")
+    compile("io.prometheus:simpleclient_hotspot:0.0.26")
+    compile("io.prometheus:simpleclient_servlet:0.0.26")
 }
 
