--- a/links.config
+++ b/links.config
@@ -1,8 +1,9 @@
 links:
-  jira: http://www.linktojira.com
-  jenkins: http://www.linktojenkins.com
-  cmdb: http://www.linktocmdb.com
-  iteraplan: http://www.linktoiteraplan.com
-  lifetime: http://www.linktolifetime.com
+  github:https://github.com/Nicocovi/Microservice1
+  jira: http://www.localhost:8099/rest/api/2/project/MAS
+  jenkins: http://localhost:8008/job/Masterarbeitssoftware-backend
+  iteraplan: http://localhost:1234/iteraplan/client/#/single/InformationSystem/1704
+  cmdb: http://www.linktocmdb.com/xxx
+  wiki: http://www.linktowiki.com/xxx
   
   
