--- a/links.config
+++ b/links.config
@@ -1,8 +1,6 @@
-github: https://github.com/Nicocovi/Microservice1
-jira: http://www.localhost:8099/rest/api/2/project/MAS
-jenkins: http://localhost:8008/job/Masterarbeitssoftware-frontend
-iteraplan: http://localhost:1234/iteraplan/client/#/single/InformationSystem/1705
-cmdb: http://www.linktocmdb.com/xxx
-wiki: http://www.linktowiki.com/xxx
+github: https://github.com/Nicocovi/Microservice2
+jira: http://vmmatthes32.informatik.tu-muenchen.de:6000/rest/api/2/project/ED
+jenkins: http://131.159.30.173:8081/job/Masterarbeitssoftware-frontend
+iteraplan: http://vmmatthes32.informatik.tu-muenchen.de:8080/iteraplan/client/#/single/InformationSystem/1705
   
   
