--- a/links.config
+++ b/links.config
@@ -1,4 +1,4 @@
-github: https://github.com/Nicocovi/Microservice2
-jira: http://vmmatthes32.informatik.tu-muenchen.de:6000/rest/api/2/project/ED
-jenkins: http://131.159.30.173:8081/job/Masterarbeitssoftware-frontend
-iteraplan: http://vmmatthes32.informatik.tu-muenchen.de:8080/iteraplan/client/#/single/InformationSystem/1705
+github: https://github.com/ludwigachhammer/Microservice2.git
+jira: http://testjira.de
+jenkins: http://localhost:8282/job/mockservice2
+iteraplan: http://iteraplantest.de
