--- a/links.config
+++ b/links.config
@@ -1,4 +1,4 @@
-github: https://github.com/ludwigachhammer/Microservice2.git
+github: https://github.com/ludwigachhammer/Microservice2
 jira: http://testjira.de
 jenkins: http://localhost:8282/job/mockservice2
 iteraplan: http://iteraplantest.de
